# termineer

./: .autoswe  .dockerignore  .env.example  .gitignore  .todo  Cargo.toml  README.md  build.rs  count.sh  deny.toml  docker-compose.yml  mcp_implementation_plan.md  release.sh  rustc-ice-2025-03-01T11_39_04-95499.txt  rustc-ice-2025-03-02T13_44_02-56356.txt  shell_execution_flow.md  test_integration.sh  test_large_file.txt  test_long.sh  text.txt
.cargo/: config.toml
.github/workflows/: build-npm-package.yml  build.yml  ci.yml  homebrew-release.yml  release.yml
.termineer/: autoinclude  config.json  info
.termineer/workflows/: complete_feature.yaml  feature.yaml  simple_feature.yaml
backup/auth/: functions.rs
backup/plus/: documentor.hbs  explorer.hbs  minimal.hbs  system_architect.hbs
backup/prompts/: tools.hbs
backup/prompts/kind/: programmer.hbs  prompt_engineer.hbs
database/: fly.toml  info
doc/: session_management.md  token_optimization.md
docs/deploy/: README.md  aws.md  comparison.md  digital-ocean.md  final-architecture.md  fly-io.md  frontend.md  railway.md  recommendation.md  render.md
docs/monetization/: README.md  competitive_analysis.md  differentiation_strategy.md  implementation_guide.md  monetization_strategies.md  revised_recommendations.md  successful_examples.md
docs/naming/: agent-coding-terminal-ai-options.md  agent-focused-options.md  alternative-candidates.md  comprehensive-creative-names.md  comprehensive-naming-options.md  distinctive-creative-options.md  expanded-alternatives.md  expanded-concept-options.md  extensive-movie-tech-names.md  final-alternatives-recommendation.md  final-recommendation-summary.md  final-recommendation.md  final-unique-recommendations.md  final-validation.md  hacker-friendly-names.md  market-analysis.md  movie-inspired-names.md  name-candidates.md  naming-patterns-analysis.md  naming-research.md  project-specific-names.md  summary.md  tron-matrix-agent-names.md  unique-validated-options.md
docs/prompting/: advanced-llm-prompting-techniques.md  improving-llm-agent-output-quality.md  purpose-specific-prompting-guide.md
prompts/: basic.hbs  basic.xml  basic_prompt.xml  minimal.hbs  minimal.xml  orchestrator.xml  orchestrator_prompt.xml  researcher.hbs  subagent.hbs  tools.hbs
prompts/kind/: general.hbs  minimal.hbs  orchestrator.hbs  programmer.hbs  prompt_engineer.hbs  researcher.hbs  troubleshooter.hbs
prompts/kind/plus/: coder.hbs  data_analyst.hbs  feature_implementer.hbs  general.hbs  implementer.hbs  minimal.hbs  orchestrator.hbs  reasoner.hbs  researcher.hbs  system_architect.hbs  task_decomposer.hbs  troubleshooter.hbs
scripts/: pre-push
server/: .env.example  Cargo.toml  Dockerfile.dev  Dockerfile.prod  Dockerfile.web  Dockerfile.workspace  README.md  README_FRONTEND.md  fly.prod.toml  fly.test.toml  fly.toml
server/examples/: client_integration.rs
server/migrations/: 001_initial_schema.sql  002_add_auth_codes.sql  003_add_cli_tokens.sql  004_add_google_tokens.sql  20240305_sqlite_schema.sql
server/src/: config.rs  errors.rs  main.rs  middleware.rs  simple_server.rs  templates.rs
server/src/api/: auth.rs  license.rs  mock_license.rs  mod.rs  payment.rs
server/src/auth/: google.rs  jwt.rs  mod.rs  oauth.rs  routes.rs  session.rs
server/src/db/: mod.rs  models.rs  operations.rs
server/src/payment/: mod.rs  stripe.rs
server/static/: robots.txt  site.webmanifest
server/static/js/: auth.js
server/static/seo/: sitemap.xml
server/templates/: 404.html  app-schema.html  base.html  checkout.html  index.html  manual.html
server/templates/components/: auth_button.html  pricing.html
src/: agent.rs  ansi_converter.rs  cli.rs  commands.rs  config.rs  constants.rs  conversation.rs  conversation_maintenance.rs  conversation_truncation.rs  jsonpath.rs  lib.rs  macros.rs  main.rs  prompt_templates.rs  prompts.rs  serde_element_array.rs  server_auth.rs  server_auth_mock.rs  session.rs  ui_interface.rs  version_check.rs
src/agent/: agent.rs  agent_impl.rs  interrupt.rs  manager.rs  mod.rs  tokens.rs  types.rs
src/auth/: client.rs  functions.rs  mod.rs
src/conversation/: maintenance.rs  mod.rs  parse.rs  tool_mapping.rs  truncation.rs
src/gui/: mod.rs
src/llm/: anthropic.rs  cohere.rs  deepseek.rs  factory.rs  gemini.rs  grok.rs  mod.rs  openai.rs  openrouter.rs  retry_utils.rs  types.rs
src/mcp/: client.rs  config.rs  connection.rs  connection_trait.rs  error.rs  manager.rs  mod.rs  process_connection.rs  tool_provider.rs
src/mcp/native/: registry.rs
src/mcp/protocol/: common.rs  content.rs  messages.rs  mod.rs  schema.rs  tools.rs
src/output/: mod.rs
src/prompts/: grammar.rs  handlebars.rs  mod.rs  protected.rs  template.rs  xml.rs
src/screen_access/: error.rs  mod.rs
src/serde_utils/: element_array.rs  mod.rs  string_or_number.rs
src/tools/: agent.rs  async_executor.rs  done.rs  dynamic_mcp.rs  fetch.rs  mcp.rs  mcp_by_name.rs  mod.rs  patch.rs  path_utils.rs  read.rs  read.rs.bak  screendump.rs  screenshot.rs  search.rs  shell.rs  shell_async.rs  task.rs  wait.rs  write.rs
src/tools/input/: macos.rs  mod.rs
src/tools/screendump/: macos.rs  mod.rs
src/tools/ui/: input.rs  mod.rs  screendump.rs  screenshot.rs  structure.rs
src/tools/ui/linux/: mod.rs  screenshot.rs
src/tools/ui/macos/: input.rs  mod.rs  screendump.rs  screenshot.rs  xml_helpers.rs
src/tools/ui/windows/: mod.rs  screenshot.rs
src/tui/: commands.rs  events.rs  interface.rs  mod.rs  rendering.rs  state.rs
src/tui/popup/: commands.rs  mod.rs  temporary.rs
src/workflow/: cli.rs  context.rs  executor.rs  loader.rs  mod.rs  types.rs
src/workflow/steps/: mod.rs
tests/files/: large_file.txt
tmp/: enhanced_task_docs.hbs  mcp_tools_updated.hbs  test_duplicate.txt  tools_review.md
