[workspace]
members = [".", "server"]

[package]
name = "termineer"
version = "0.2.2"
edition = "2021"
license = "MIT"

[profile.dev.package."*"]
opt-level = 3

# Release profile optimizations for binary size
[profile.release]
# Generate debug info for better troubleshooting
debug = true
# Split debug info into separate files to keep binary small
split-debuginfo = "packed"
# Enable stripping of debug symbols from the main binary
strip = true
# Optimize for size
opt-level = "z"
# Enable Link Time Optimization
lto = true
# Reduce parallel code generation units to increase optimization
codegen-units = 1

[dependencies]
anyhow = "1.0"  # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
crossterm = "0.27"
ratatui = "0.26.1"
atty = "0.2"
chrono = "0.4"
thiserror = "2.0.12"
ctrlc = "3.4.1"
lazy_static = "1.4.0"  # For static initialization
handlebars = "6.3.1"  # Handlebars templating
urlencoding = "2.1.3"  # URL encoding for API requests
aes-gcm = "0.10.3"     # AES-GCM encryption
obfstr = "0.4.3"       # String obfuscation for sensitive constants
rand = "0.8.5"         # For random number generation
dirs = "5.0.1"         # For getting user directories
base64 = "0.21.5"      # For encoding/decoding base64 in OAuth flow and screenshots
xcap = "0.4.0"         # Cross-platform screen capture library (replaces screenshots)
image = "0.24.7"       # For image processing and format conversion
glob = "0.3.1"         # For glob pattern matching in autoinclude feature
scraper = "0.23.1"
clap = { version = "4.4", features = ["derive"] }  # Command-line argument parsing
quick-xml = "0.30.0"   # For XML serialization in screendump
indexmap = "2.8.0"

# Dependencies for Computer Use feature
enigo = "0.1.3"        # Cross-platform keyboard and mouse control
tempfile = "3.10.1"    # Temporary file/directory handling for tests

# Platform-specific dependencies for Computer Use
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = { version = "0.2.7" }         # Objective-C runtime bindings
core-graphics = "0.23.1"            # For mouse and keyboard events
core-graphics-types = "0.1.3"
core-foundation = "0.10.0" # Core Foundation bindings
accessibility-sys-ng = "0.1.3"
accessibility-ng = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] } # Windows API for cursor position

[build-dependencies]
aes-gcm = "0.10.3"     # AES-GCM encryption
walkdir = "2.4.0"      # For walking directories in build script
quote = "1.0.33"       # For code generation
proc-macro2 = "1.0.78" # Required by quote