[package]
name = "termineer-server"
version = "0.1.11"
edition = "2021"
description = "Simple server for Termineer"

[dependencies]
# Web framework
axum = { version = "0.7.4", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "cors", "trace"] }
tokio = { version = "1.33.0", features = ["full"] }
hyper = "1.2.0"
http-body-util = "0.1.0"
bytes = "1.5.0"

# Templating
askama = "0.12.1"
askama_axum = "0.4.0"

# Database
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }

# Utilities
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
config = "0.13.3"
tracing = "0.1"
tracing-subscriber = "0.3"

# Authentication
tower-cookies = "0.10.0"
jsonwebtoken = "8.3.0"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
time = "0.3.20"

[dev-dependencies]
tokio-test = "0.4.2"
mockito = "1.1.0"