[package]
name = "termineer-server"
version = "0.2.9"
edition = "2021"
description = "Simple server for Termineer"

[dependencies]
# Web framework
axum = { version = "0.7.4", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tokio.workspace = true


# Templating
askama = "0.12.1"
askama_axum = "0.4.0"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
config = { version = "0.15.11", default-features = false}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Authentication
tower-cookies = "0.10.0"
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
time = "0.3.20"

[dev-dependencies]
tokio-test = "0.4.2"
mockito = "1.1.0"